--- a/src/app/shared/shared/component/header/header.component.html
+++ b/src/app/shared/shared/component/header/header.component.html
@@ -4,19 +4,19 @@
         <img src="../assets/img/cat.png" height="35" width="35">
       </a>
 
-      <!--<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0" *ngIf="null != this.userData && this.userData.roleId == 1">
         <li><a href="#" class="nav-link px-2 link-secondary"></a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
         <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
-      </ul>-->
+      </ul>
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"></ul>
 
-      <!--<form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+      <!--<form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" >
         <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-      </form>
+      </form>-->
 
-      <div class="dropdown text-end">
+      <div class="dropdown text-end" *ngIf="null != this.userData && this.userData.roleId == 1">
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
           <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
         </a>
@@ -26,6 +26,6 @@
           <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item" href="#">Sign out</a></li>
         </ul>
-      </div>-->
+      </div>
     </div>
 </header>
