--- a/src/app/layouts/fullwidth/fullwidth.component.html
+++ b/src/app/layouts/fullwidth/fullwidth.component.html
@@ -1,7 +1,7 @@
-<app-header flexLayout="column"></app-header>
+<app-header flexLayout="row"></app-header>
 <div flexLayout="row" fxFlex>
     <div fxFlex class="content">
         <router-outlet></router-outlet>
     </div>
 </div>
-<app-footer flexLayout="column"></app-footer>
+<app-footer flexLayout="row" ></app-footer>
