--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -3,18 +3,18 @@
       <a href="#"><img src="./assets/img/cat.png" alt="" width="100" height="100"></a>
     <h1 class="text-white h3">Account Login</h1>
     </div>
-    <form class="mt-4">
+    <form [formGroup]="homeForm" (ngSubmit)="onSubmit()" class="mt-4">
       <div class="input-group uf-input-group input-group-lg mb-3">
         <span class="input-group-text fa fa-user"></span>
-        <input type="text" class="form-control" placeholder="Username">
+        <input type="text" class="form-control" placeholder="Username" formControlName="userName" required>
       </div>
       <div class="input-group uf-input-group input-group-lg mb-3">
         <span class="input-group-text fa fa-paper-plane"></span>
-        <input type="password" class="form-control" placeholder="Password">
+        <input type="password" class="form-control" name="password" placeholder="Password" formControlName="password" >
       </div>
       <div class="d-flex mb-3 justify-content-between">
         <div class="form-check">
-          <input type="checkbox" class="form-check-input uf-form-check-input" id="exampleCheck1">
+          <input type="checkbox" class="form-check-input uf-form-check-input" id="exampleCheck1" formControlName="remember" required>
           <label class="form-check-label text-white" for="exampleCheck1">จดจำรหัสผ่าน</label>
         </div>
       </div>
@@ -22,4 +22,4 @@
         <button type="submit" class="btn btn-primary btn-lg">Login</button>
       </div>
     </form>
-  </div>
+</div>
